--- a/index.html
+++ b/index.html
@@ -3,96 +3,160 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio of Tan">
+    <meta name="description" content="Tan's Portfolio">
+    <meta name="author" content="Tan">
     <title>Tan's Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        /* General Reset */
+        * {
             margin: 0;
             padding: 0;
-            background-color: #f4f4f9;
+            box-sizing: border-box;
+        }
+        body {
+            font-family: 'Roboto', sans-serif;
+            line-height: 1.6;
+            background: #f4f4f9;
             color: #333;
         }
+        /* Header Styling */
         header {
-            background-color: #4CAF50;
+            background: linear-gradient(to right, #4CAF50, #81C784);
             color: white;
-            padding: 20px;
+            padding: 20px 0;
             text-align: center;
         }
         header h1 {
+            font-size: 3rem;
             margin: 0;
         }
+        header p {
+            margin: 10px 0;
+            font-size: 1.2rem;
+            font-weight: 300;
+        }
+        /* Navigation Bar */
         nav {
+            background: #333;
             text-align: center;
-            margin: 20px 0;
+            padding: 10px 0;
         }
         nav a {
+            color: white;
             text-decoration: none;
-            color: #4CAF50;
-            margin: 0 10px;
+            margin: 0 15px;
             font-weight: bold;
+            font-size: 1.1rem;
+            transition: color 0.3s;
         }
         nav a:hover {
-            color: #045d20;
-        }
-        section {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-        }
-        section h2 {
-            margin-top: 0;
             color: #4CAF50;
         }
+        /* Section Styling */
+        section {
+            padding: 30px 20px;
+            max-width: 900px;
+            margin: 30px auto;
+            background: white;
+            border-radius: 10px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        }
+        section h2 {
+            color: #4CAF50;
+            font-size: 2rem;
+            margin-bottom: 20px;
+        }
+        section ul {
+            list-style: disc inside;
+            margin-top: 10px;
+        }
+        section ul li {
+            margin: 8px 0;
+        }
+        section p {
+            margin: 10px 0;
+            font-size: 1rem;
+        }
+        /* Contact Links */
+        #contact a {
+            color: #4CAF50;
+            text-decoration: none;
+            font-weight: bold;
+            transition: color 0.3s;
+        }
+        #contact a:hover {
+            color: #81C784;
+        }
+        /* Footer Styling */
         footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #4CAF50;
+            background: #333;
             color: white;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
+            text-align: center;
+            padding: 10px 0;
+            margin-top: 20px;
+            font-size: 0.9rem;
+        }
+        footer p {
+            margin: 0;
+        }
+        footer a {
+            color: #4CAF50;
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+        footer a:hover {
+            color: #81C784;
         }
     </style>
 </head>
 <body>
+    <header>
+        <h1>Tan's Portfolio</h1>
+        <p>Welcome to my personal portfolio website</p>
+    </header>
 
-<header>
-    <h1>Welcome to Tan's Portfolio</h1>
-    <p>Showcasing my projects and achievements</p>
-</header>
+    <nav>
+        <a href="#about">About</a>
+        <a href="#skills">Skills</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+    </nav>
 
-<nav>
-    <a href="#about">About Me</a>
-    <a href="#projects">Projects</a>
-    <a href="#contact">Contact</a>
-</nav>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Hello! I'm Tan, an ERP Manager with a passion for technology, agriculture, and game development. I'm currently working with Dynamics 365 F&O and exploring ways to integrate AI into productivity tools.</p>
+    </section>
 
-<section id="about">
-    <h2>About Me</h2>
-    <p>Hi, I'm Tan. I am passionate about technology, agriculture, and game development. With a background in computer engineering and a keen interest in AI, I'm on a mission to create impactful solutions for diverse industries.</p>
-</section>
+    <section id="skills">
+        <h2>Skills</h2>
+        <ul>
+            <li>ERP Management (Dynamics 365, SAP)</li>
+            <li>Game Development (SpriteKit)</li>
+            <li>AI Integration for Productivity</li>
+            <li>Cybersecurity Fundamentals</li>
+        </ul>
+    </section>
 
-<section id="projects">
-    <h2>Projects</h2>
-    <ul>
-        <li><strong>Project 1:</strong> <a href="https://github.com/your-username/project1" target="_blank">Game Development using SpriteKit</a></li>
-        <li><strong>Project 2:</strong> <a href="https://github.com/your-username/project2" target="_blank">Agricultural Productivity Enhancement App</a></li>
-        <li><strong>Project 3:</strong> <a href="https://github.com/your-username/project3" target="_blank">D365 F&O Customization</a></li>
-    </ul>
-</section>
+    <section id="projects">
+        <h2>Projects</h2>
+        <p>Here are some of the projects I've worked on:</p>
+        <ul>
+            <li>Dynamics 365 Implementation at Com7</li>
+            <li>2048-like game for iOS using SpriteKit</li>
+            <li>AI-powered agricultural productivity tool</li>
+        </ul>
+    </section>
 
-<section id="contact">
-    <h2>Contact</h2>
-    <p>If you'd like to get in touch, feel free to email me at <a href="mailto:tan@example.com">tan@example.com</a> or connect with me on <a href="https://www.linkedin.com/in/your-profile" target="_blank">LinkedIn</a>.</p>
-</section>
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:tan@example.com">tan@example.com</a></p>
+        <p>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
+        <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">linkedin.com/in/yourprofile</a></p>
+    </section>
 
-<footer>
-    <p>&copy; 2024 Tan. All Rights Reserved.</p>
-</footer>
-
+    <footer>
+        <p>© 2024 Tan. All rights reserved.</p>
+    </footer>
 </body>
 </html>
