--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <!-- Intro Section -->
         <section id="intro" class="s-intro target-section">
             <div class="row s-intro__content width-sixteen-col">
-                <div class="column lg-12 s-intro__content-inner grid-block grid-16">
+                <div class="column lg-6 s-intro__content-inner">
                     <div class="s-intro__content-text">
                         <div class="s-intro__content-pretitle text-pretitle">Hello</div>
                         <h1 class="s-intro__content-title">
@@ -74,30 +74,23 @@
                         </div>
                     </div>
                 </div>
-            </div>
-            <ul class="s-intro__social social-list">
-                <li>
-                    <a href="https://github.com/yourusername" target="_blank">
-                        <svg>...</svg>
-                        <span class="u-screen-reader-text">GitHub</span>
-                    </a>
-                </li>
-                <li>
-                    <a href="https://linkedin.com/in/yourprofile" target="_blank">
-                        <svg>...</svg>
-                        <span class="u-screen-reader-text">LinkedIn</span>
-                    </a>
-                </li>
-            </ul>
-            <div class="s-intro__btn-download">
-                <a class="btn btn--stroke" href="#0">Download My CV</a>
+                <div class="column lg-6">
+                    <div class="s-intro__photo">
+                        <img src="images/about-me.jpg" alt="Photo of Tan">
+                    </div>
+                </div>
             </div>
         </section>
 
         <!-- About Section -->
         <section id="about" class="s-about target-section">
             <div class="row s-about__content">
-                <div class="column xl-12">
+                <div class="column xl-6">
+                    <div class="s-about__photo">
+                        <img src="images/tan-work.jpg" alt="Tan working">
+                    </div>
+                </div>
+                <div class="column xl-6">
                     <div class="section-header" data-num="01">
                         <h2 class="text-display-title">About Me.</h2>
                     </div>
@@ -140,7 +133,7 @@
                 <div class="column entry">
                     <a href="#" class="entry__link glightbox">
                         <div class="entry__thumb">
-                            <img src="images/folio/erp.jpg" alt="">
+                            <img src="images/folio/erp.jpg" alt="ERP System">
                         </div>
                         <div class="entry__info">
                             <h4 class="entry__title">ERP Implementation</h4>
@@ -151,7 +144,7 @@
                 <div class="column entry">
                     <a href="#" class="entry__link glightbox">
                         <div class="entry__thumb">
-                            <img src="images/folio/game.jpg" alt="">
+                            <img src="images/folio/game.jpg" alt="iOS Game">
                         </div>
                         <div class="entry__info">
                             <h4 class="entry__title">2048-like iOS Game</h4>
@@ -172,10 +165,10 @@
                 </div>
             </div>
             <div class="row s-footer__content">
-                <div class="column xl-6 md-12">
+                <div class="column xl-6">
                     <p>Feel free to reach out to discuss your project or collaboration opportunities. Let’s create something amazing!</p>
                 </div>
-                <div class="column xl-6 md-12">
+                <div class="column xl-6">
                     <ul class="link-list">
                         <li>Email: <a href="mailto:tan@example.com">tan@example.com</a></li>
                         <li>Phone: <a href="tel:+123456789">+123 456 789</a></li>
